All the pages done

--- a/Codigos/atividades_culturais.html
+++ b/Codigos/atividades_culturais.html
@@ -2,7 +2,7 @@
 
 <html lang="pt-br">
     <head>
-        <title>Sobre Mim</title>
+        <title>Hobbies</title>
         <meta charset="UTF-8">
         <meta name="author" content="Rebeca Domingos Rosa">
         <link rel="stylesheet" type="text/css" href="style.css" />
@@ -11,9 +11,9 @@
     <body>
         <div class="principal">
             
-            <div class="capa">
-                <img src="imagens/Capa.png">
-            </div>
+            <header class="capa">
+                <img src="/imagens/Capa.png">
+            </header>
             <nav class="menu">
                 <ul>
                     <li><a href="index.html">SOBRE MIM</a></li>
@@ -27,14 +27,37 @@
                     <li><a href="atividades_culturais.html">HOBBIES</a></li>
                 </ul>
             </nav>
-            <div class="corpo">
-                <div class="imagem">
+            <main class="corpo">
+                <section id="hobbies">
+                    <h1>HOBBIES</h1>
+                    <div>
+                        <figure class="flutuar">
+                            <img src="imagens/filmes-hobbies.png">
+                            <div>Ver Filmes e Séries</div>
+                        </figure>
+                        <figure class="flutuar">
+                            <img src="imagens/jogar-hobbbies.png">
+                            <div>Jogar</div>
+                        </figure>
+                        <figure class="flutuar">
+                            <img src="imagens/passear-hobbie.png">
+                            <div>Passear com o dog</div>
+                        </figure>
+                        <figure class="flutuar">
+                            <img src="imagens/pintura-hobbies.png">
+                            <div>Ler livros</div>
+                        </figure>
+                        <figure class="flutuar">
+                            <img src="imagens/livros-hobbies.png">
+                            <div>Pintar telas</div>
+                        </figure>
+                    </div>
+                </section>
 
-                </div>
-                <div class="texto">
-
-                </div>
-            </div>
+            </main>
+            <footer class="rodape">
+                <p>Produzido por Rebeca Rosa</p>
+            </footer>
                
         </div>
     </body>
