--- a/Codigos/colegios.html
+++ b/Codigos/colegios.html
@@ -2,7 +2,7 @@
 
 <html lang="pt-br">
     <head>
-        <title>Sobre Mim</title>
+        <title>Colégios</title>
         <meta charset="UTF-8">
         <meta name="author" content="Rebeca Domingos Rosa">
         <link rel="stylesheet" type="text/css" href="style.css" />
@@ -11,9 +11,9 @@
     <body>
         <div class="principal">
             
-            <div class="capa">
+            <header class="capa">
                 <img src="imagens/Capa.png">
-            </div>
+            </header>
             <nav class="menu">
                 <ul>
                     <li><a href="index.html">SOBRE MIM</a></li>
@@ -27,23 +27,26 @@
                     <li><a href="atividades_culturais.html">HOBBIES</a></li>
                 </ul>
             </nav>
-            <div class="corpo">
-                <div class="imagem">
-                    <img src="imagens/tiana-index.png">
-                </div>
-                <div class="texto">
-                    <h1>REBECA DOMINGOS ROSA</h1>
-                    <p><strong>Idade: </strong>22 anos <br>
-                        <strong>Cidade:</strong> Poços de Caldas<br>
-                        <strong>Estado:</strong>Minas Gerais <br>
-                        <strong>Endereço:</strong> Rua das Estrelinhas, 5<br>
-                        <strong>Curso:</strong> Engenharia da Computação<br>
-                        <strong>Período:</strong> 7° Período</p>
-                </div>
-            </div>
-            <div class="rodape">
+            <main class="corpo">
+
+                <figure class="imagem">
+                    <img src="imagens/hermione-colegios.png">
+                </figure>
+
+                <section class="texto">
+                    <h1>COLÉGIOS</h1>
+                    <ol type="1">
+                        <li>Ensino Superior:  <a href="https://portal.pcs.ifsuldeminas.edu.br/">Ifsuldeminas-Campus Poços de Caldas</a></li>
+                        <li>Ensino Técnico:  <a href="https://portal.pcs.ifsuldeminas.edu.br/">Ifsuldeminas-Campus Poços de Caldas</a></li>
+                        <li>Ensino Médio:  <a href="https://portal.pcs.ifsuldeminas.edu.br/">Ifsuldeminas-Campus Poços de Caldas</a></li>
+                        <li>Ensino Fundamental: <a href="http://colegioninimourao.com.br/">Colégio Nini Mourão</a></li>
+                    </ol>
+                </section>
+
+            </main>
+            <footer class="rodape">
                 <p>Produzido por Rebeca Rosa</p>
-            </div>
+            </footer>
                
         </div>
     </body>
