--- a/Codigos/curso_superior_eng_comp.html
+++ b/Codigos/curso_superior_eng_comp.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 
+<!DOCTYPE html>
+
 <html lang="pt-br">
     <head>
-        <title>Sobre Mim</title>
+        <title>Curso Eng Comp</title>
         <meta charset="UTF-8">
         <meta name="author" content="Rebeca Domingos Rosa">
         <link rel="stylesheet" type="text/css" href="style.css" />
@@ -11,9 +13,9 @@
     <body>
         <div class="principal">
             
-            <div class="capa">
+            <header class="capa">
                 <img src="imagens/Capa.png">
-            </div>
+            </header>
             <nav class="menu">
                 <ul>
                     <li><a href="index.html">SOBRE MIM</a></li>
@@ -27,14 +29,127 @@
                     <li><a href="atividades_culturais.html">HOBBIES</a></li>
                 </ul>
             </nav>
-            <div class="corpo">
-                <div class="imagem">
+            <main class="corpo">
+                <section>
+                    <h1>Apresentação do Curso de Engenharia de Computação</h1>
+                    <p align="justify">O curso de Engenharia de Computação do IFSULDEMINAS- Câmpus Poços de
+                        Caldas tem por objetivo capacitar profissionais a atuarem na inovação e no desenvolvimento
+                        de soluções em tecnologia, envolvendo tanto o hardware quanto o software, independente de
+                        qual setor ela seja empregada.</p>
+                    <p align="justify">
+                        Os engenheiros de computação disponibilizam para a sociedade produtos de eletrônica de
+                        consumo, de comunicações e de automação, além disso, também desenvolvem sistemas de
+                        computação embarcados (como em aviões, satélites e automóveis) para realizar funções
+                        de controle. Uma grande linha de sistemas tecnologicamente complexos, como sistemas
+                        de geração e distribuição de energia elétrica e plantas modernas de processamento e
+                        industrial, dependem de sistemas de computação desenvolvidos e projetados por
+                        engenheiros de computação. Existe uma convergência de diversas tecnologias resultando em
+                        acesso amplo e rápido a informações em grande escala, em cujo desenvolvimento os
+                        engenheiros de computação têm uma participação efetiva. 
+                    </p>
+                    <p align="justify">
+                        Assim, o engenheiro de computação deve possuir formação que integra as áreas
+                        da engenharia elétrica e da ciência da computação. O curso de Engenharia de
+                        Computação do IFSULDEMINAS - Câmpus Poços de Caldas, especificamente,
+                        possibilita essa formação de maneira sólida e consolidada. Isto porque o curso é uma
+                        integração das áreas técnicas de Eletrotécnica e Informática que já atuam na educação
+                        profissional nessa Instituição. Essa integração permite unificar e compartilhar a
+                        estrutura e o corpo docente dessas duas áreas fortalecendo os princípios do ensino
+                        verticalizado.
+                    </p>
+                    <p align="justify">Além da integração dessas três áreas para a formação do engenheiro de computação,
+                        o curso segue as diretrizes e recomendações de órgãos legisladores como o CONFEA
+                        (Conselho Federal de Engenharia e Arquitetura) e de comunidades acadêmicas como a SBC
+                        (Sociedade Brasileira de Computação).</p>
+                    <p align="justify">O curso de Engenharia de Computação tem duração mínima de cinco anos com aulas
+                        em tempo integral (manhã e tarde). A carga horária total do curso contém 4.266,7 horas,
+                        sendo 3.766,7 horas em aulas, duzentas horas para o cumprimento do estágio
+                        supervisionado, duzentas horas para atividades complementares e cem horas para o
+                        desenvolvimento do trabalho de conclusão de curso.</p>
+                    <p align="justify">
+                        As aulas do curso são teóricas e práticas. As aulas práticas são realizadas em
+                        laboratórios temáticos que favorecem o aprendizado do discente simulando atividades e
+                        situações que certamente farão parte de sua vida profissional. O discente terá aulas
+                        práticas nos seguintes laboratórios: laboratório de física; laboratório de química;
+                        laboratório de informática industrial e simulação de circuitos eletrônicos; laboratório
+                        de acionamentos, máquinas elétricas, controle e automação; laboratório de eletricidade,
+                        eletrônica e microcontroladores; laboratório de hardware e robótica e laboratórios de
+                        informática.
+                    </p>
+                    <p>No quadro a seguir são apresentadas informações básicas sobre o curso:</p> <br>
+                    <table>
+                        <caption>Informações sobre o curso</caption>
+                        <tr>
+                            <td><strong>Nome do curso:</strong></td>
+                            <td>Engenharia da Computação</td>
+                        </tr>
+                        <tr>
+                            <td><strong>Modalidade:</strong></td>
+                            <td>Bacharelado</td>
+                        </tr>
+                        <tr>
+                            <td><strong>Local de funcionamento:</strong></td>
+                            <td>IFSULDEMINAS - Câmpus Poços de Caldas</td>
+                        </tr>
+                        <tr>
+                            <td><strong>Ano de implantação:</strong></td>
+                            <td>2015</td>
+                        </tr>
+                        <tr>
+                            <td><strong>Habilitação:</strong></td>
+                            <td>Engenheiro de Computação</td>
+                        </tr>
+                        <tr>
+                            <td><strong>Turno de Funcionamento:</strong></td>
+                            <td>Diurno (Matutino, Vespertino)</td>
+                        </tr>
+                        <tr>
+                            <td><strong>Número de vagas oferecidas:</strong></td>
+                            <td>35</td>
+                        </tr>
+                        <tr>
+                            <td><strong>Forma de ingresso:</strong></td>
+                            <td>Processo seletivo: Vestibular e SISU/ENEM</td>
+                        </tr>
+                        <tr>
+                            <td><strong>Periodicidade da oferta:</strong></td>
+                            <td>Anual</td>
+                        </tr>
+                        <tr>
+                            <td><strong>Duração do curso:</strong></td>
+                            <td>Mínima: 5 anos/ Máxima: 10 anos</td>
+                        </tr>
+                        <tr>
+                            <td><strong>Carga horária total:</strong></td>
+                            <td>4.266,7 horas</td>
+                        </tr>
+                        <tr>
+                            <td><strong>Carga horária em aula:</strong></td>
+                            <td>3.766,7 horas</td>
+                        </tr>
+                        <tr>
+                            <td><strong>Hora-aula:</strong></td>
+                            <td>50 minutos</td>
+                        </tr>
+                        <tr>
+                            <td><strong>Trabalho de Conclusão de Curso:</strong></td>
+                            <td>100 horas</td>
+                        </tr>
+                        <tr>
+                            <td><strong>Estágio Supervisionado:</strong></td>
+                            <td>200 horas</td>
+                        </tr>
+                        <tr>
+                            <td><strong>Atividades Complementares:</strong></td>
+                            <td>200 horas</td>
+                        </tr>
+                    </table>
+                </section>
 
-                </div>
-                <div class="texto">
-
-                </div>
-            </div>
+            </main>
+            <footer id="rodape-curso">
+                <p>Produzido por Rebeca Rosa</p>
+            </footer>
                
         </div>
     </body>
