--- a/Codigos/formacao_academica.html
+++ b/Codigos/formacao_academica.html
@@ -2,7 +2,7 @@
 
 <html lang="pt-br">
     <head>
-        <title>Sobre Mim</title>
+        <title>Formação Acadêmica</title>
         <meta charset="UTF-8">
         <meta name="author" content="Rebeca Domingos Rosa">
         <link rel="stylesheet" type="text/css" href="style.css" />
@@ -11,9 +11,9 @@
     <body>
         <div class="principal">
             
-            <div class="capa">
+            <header class="capa">
                 <img src="imagens/Capa.png">
-            </div>
+            </header>
             <nav class="menu">
                 <ul>
                     <li><a href="index.html">SOBRE MIM</a></li>
@@ -27,14 +27,27 @@
                     <li><a href="atividades_culturais.html">HOBBIES</a></li>
                 </ul>
             </nav>
-            <div class="corpo">
-                <div class="imagem">
+            <main class="corpo">
 
-                </div>
-                <div class="texto">
+                <figure class="imagem">
+                    <img src="imagens/katniss-formacao.png">
+                </figure>
 
-                </div>
-            </div>
+                <section class="texto">
+                    <h1>FORMAÇÃO ACADÊMICA</h1>
+                    <ul>
+                        <li>Projeto de IC: Desenvolvimento de Tecnologias<br> de Descontaminação</li>
+                        <li>Projeto de Extensão: GDAI... Me Ajude!</li>
+                        <li>Projeto de Extensão: Inclusão 4.0</li>
+                        <li>Monitoria: Eletrônica Analógica I</li>
+                        <li>Empresa Junior: Gerente de Marketing</li>
+                    </ul>
+                </section>
+
+            </main>
+            <footer class="rodape">
+                <p>Produzido por Rebeca Rosa</p>
+            </footer>
                
         </div>
     </body>
