--- a/Codigos/horario_de_aulas.html
+++ b/Codigos/horario_de_aulas.html
@@ -2,7 +2,7 @@
 
 <html lang="pt-br">
     <head>
-        <title>Sobre Mim</title>
+        <title>Horários das Aulas</title>
         <meta charset="UTF-8">
         <meta name="author" content="Rebeca Domingos Rosa">
         <link rel="stylesheet" type="text/css" href="style.css" />
@@ -11,9 +11,9 @@
     <body>
         <div class="principal">
             
-            <div class="capa">
+            <header class="capa">
                 <img src="imagens/Capa.png">
-            </div>
+            </header>
             <nav class="menu">
                 <ul>
                     <li><a href="index.html">SOBRE MIM</a></li>
@@ -27,14 +27,66 @@
                     <li><a href="atividades_culturais.html">HOBBIES</a></li>
                 </ul>
             </nav>
-            <div class="corpo">
-                <div class="imagem">
+            <main class="corpo">
 
-                </div>
-                <div class="texto">
+                <figure class="imagem">
+                    <img src="imagens/amy-horarios.png">
+                </figure>
 
-                </div>
-            </div>
+                <section class="texto">
+                    <h1 id="titulo-horario">HORÁRIOS</h1>
+                    <table id="tabela">
+                      <tr>
+                          <th>Horários</th>
+                          <th>Segunda</th>
+                          <th>Terça</th>
+                          <th>Quarta</th>
+                          <th>Quinta</th>
+                          <th>Sexta</th>
+                      </tr>
+                      <tr>
+                        <td>8:50-10:30</td>
+                        <td>Inteligência Artificial</td>
+                        <td>Gerência de Redes</td>
+                        <td>Princípios de Comunicação</td>
+                        <td>Inteligência Artificial</td>
+                        <td>Eng. Software II</td>
+                    </tr>  
+                    <tr>
+                        <td>11:00-12:40</td>
+                        <td>Prog Web I</td>
+                        <td>Controle</td>
+                        <td>Eng. Software II</td>
+                        <td>Banco de Dados I</td>
+                        <td>Gerência de Redes</td>
+                    </tr> 
+                    <tr>
+                        <td>12:40-14:00</td>
+                        <td colspan="5">Almoço</td>
+                    </tr>
+                    <tr>
+                        <td>14:00-15:40</td>
+                        <td>Prog Web I</td>
+                        <td>Prog Mobile</td>
+                        <td>Livre</td>
+                        <td>PLP</td>
+                        <td>Livre</td>
+                    </tr> 
+                    <tr>
+                        <td>16:00-17:40</td>
+                        <td>Banco de Dados I</td>
+                        <td>Prog Mobile</td>
+                        <td>Livre</td>
+                        <td>PLP</td>
+                        <td>Livre</td>
+                    </tr> 
+                    </table>
+                </section>
+
+            </main>
+            <footer class="rodape">
+                <p>Produzido por Rebeca Rosa</p>
+            </footer>
                
         </div>
     </body>
