--- a/Codigos/contato.html
+++ b/Codigos/contato.html
@@ -2,7 +2,7 @@
 
 <html lang="pt-br">
     <head>
-        <title>Sobre Mim</title>
+        <title>Contato</title>
         <meta charset="UTF-8">
         <meta name="author" content="Rebeca Domingos Rosa">
         <link rel="stylesheet" type="text/css" href="style.css" />
@@ -11,9 +11,9 @@
     <body>
         <div class="principal">
             
-            <div class="capa">
+            <header class="capa">
                 <img src="imagens/Capa.png">
-            </div>
+            </header>
             <nav class="menu">
                 <ul>
                     <li><a href="index.html">SOBRE MIM</a></li>
@@ -27,14 +27,24 @@
                     <li><a href="atividades_culturais.html">HOBBIES</a></li>
                 </ul>
             </nav>
-            <div class="corpo">
-                <div class="imagem">
+            <main class="corpo">
 
-                </div>
-                <div class="texto">
+                <figure class="imagem">
+                    <img src="imagens/kate-contato.png">
+                </figure>
 
-                </div>
-            </div>
+                <section class="texto">
+                    <h1>ENTRE EM CONTATO</h1>
+                    <address>
+                        E-mail: rebequinha@gmail.com<br>
+                        Telefone: 359999999999 <br>
+                    </address>
+                </section>
+
+            </main>
+            <footer class="rodape">
+                <p>Produzido por Rebeca Rosa</p>
+            </footer>
                
         </div>
     </body>
