--- a/Codigos/instituto_federal.html
+++ b/Codigos/instituto_federal.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 
+<!DOCTYPE html>
+
 <html lang="pt-br">
     <head>
-        <title>Sobre Mim</title>
+        <title>Instituto Federal</title>
         <meta charset="UTF-8">
         <meta name="author" content="Rebeca Domingos Rosa">
         <link rel="stylesheet" type="text/css" href="style.css" />
@@ -11,9 +13,9 @@
     <body>
         <div class="principal">
             
-            <div class="capa">
+            <header class="capa">
                 <img src="imagens/Capa.png">
-            </div>
+            </header>
             <nav class="menu">
                 <ul>
                     <li><a href="index.html">SOBRE MIM</a></li>
@@ -27,14 +29,44 @@
                     <li><a href="atividades_culturais.html">HOBBIES</a></li>
                 </ul>
             </nav>
-            <div class="corpo">
-                <div class="imagem">
+            <main class="corpo">
+                <section>
+                    <h1>História do Instituto Federal</h1>
+                    <p align="justify">Em 2008 o Governo Federal deu um salto na educação do país com a criação dos
+                        Institutos Federais. Através da Rede Federal de Educação Profissional e Tecnológica 31
+                        centros federais de educação tecnológica (Cefets), 75 unidades descentralizadas de
+                        ensino (Uneds), 39 escolas agrotécnicas, 7 escolas técnicas federais e 8 escolas
+                        vinculadas a universidades deixaram de existir para formar os Institutos Federais de
+                        Educação, Ciência e Tecnologia.</p>
+                    <p align="justify">
+                        No Sul de Minas, as Escolas Agrotécnicas Federais de Inconfidentes, Machado e
+                        Muzambinho, tradicionalmente reconhecidas pela qualidade na oferta de ensino médio e
+                        técnico foram unificadas. Nasce assim o atual Instituto Federal de Educação, Ciência e
+                        Tecnologia do Sul de Minas Gerais – IFSULDEMINAS. 
+                    </p>
+                    <p align="justify">
+                        Hoje, o IFSULDEMINAS oferece cursos de ensino médio integrado, técnico,
+                        cursos superiores de tecnologia, licenciatura, especialização, pós-graduação e cursos de
+                        Educação a Distância. Além dos <em>campi</em> de Inconfidentes, Machado e Muzambinho o
+                        IFSULDEMINAS tem Unidades Avançadas e Polos de Rede nas cidades da região.
+                    </p>
+                    <p align="justify">A Reitoria interliga toda a estrutura administrativa e educacional dos <em>campi</em>.
+                        Sediada em Pouso Alegre, sua estratégica localização, permite fácil acesso aos <em>campi</em> e
+                        unidades do IFSULDEMINAS. A missão do Instituto é promover a excelência na oferta
+                        da educação profissional e tecnológica em todos os níveis, formando cidadãos críticos,
+                        criativos, competentes e humanistas, articulando ensino, pesquisa e extensão e
+                        contribuindo para o desenvolvimento sustentável do Sul de Minas Gerais.</p>
+                    <p align="justify">Em todo o Brasil os Institutos Federais apresentam um modelo pedagógico e
+                        administrativo inovador. São 38 unidades, com mais de 300 <em>campi</em> em todos os estados.
+                        O Ministério da Educação investe R$1,1 bilhão na expansão da Rede Federal.
+                        Em 2010 o número de escolas ultrapassará as 354 unidades previstas. Serão 500 mil
+                        vagas em todo o país.</p>
+                </section>
 
-                </div>
-                <div class="texto">
-
-                </div>
-            </div>
+            </main>
+            <footer class="rodape">
+                <p>Produzido por Rebeca Rosa</p>
+            </footer>
                
         </div>
     </body>
