--- a/Codigos/atividades_culturais.html
+++ b/Codigos/atividades_culturais.html
@@ -15,17 +15,15 @@
                 <img src="/imagens/Capa.png">
             </header>
             <nav class="menu">
-                <ul>
-                    <li><a href="index.html">SOBRE MIM</a></li>
-                    <li><a href="colegios.html">COLÉGIOS</a></li>
-                    <li><a href="sites_favoritos.html">SITES</a></li>
-                    <li><a href="horario_de_aulas.html">HORÁRIOS</a></li>
-                    <li><a href="contato.html">CONTATOS</a></li>
-                    <li><a href="instituto_federal.html">INSTITUTO FEDERAL</a></li>
-                    <li><a href="curso_superior_eng_comp.html">CURSO ENG COMP</a></li>
-                    <li><a href="formacao_academica.html">FORMAÇÃO</a></li>
-                    <li><a href="atividades_culturais.html">HOBBIES</a></li>
-                </ul>
+                <a href="index.html">SOBRE MIM</a>
+                <a href="colegios.html">COLÉGIOS</a>
+                <a href="sites_favoritos.html">SITES</a>
+                <a href="horario_de_aulas.html">HORÁRIOS</a>
+                <a href="contato.html">CONTATOS</a>
+                <a href="instituto_federal.html">INSTITUTO FEDERAL</a>
+                <a href="curso_superior_eng_comp.html">CURSO ENG COMP</a>
+                <a href="formacao_academica.html" >FORMAÇÃO</a>
+                <a href="atividades_culturais.html" class="active">HOBBIES</a>
             </nav>
             <main class="corpo">
                 <section id="hobbies">
@@ -45,20 +43,16 @@
                         </figure>
                         <figure class="flutuar">
                             <img src="imagens/pintura-hobbies.png">
-                            <div>Ler livros</div>
+                            <div>Pintar Telas</div>
                         </figure>
                         <figure class="flutuar">
                             <img src="imagens/livros-hobbies.png">
-                            <div>Pintar telas</div>
+                            <div>Ler livros</div>
                         </figure>
                     </div>
                 </section>
 
             </main>
-            <footer class="rodape">
-                <p>Produzido por Rebeca Rosa</p>
-            </footer>
-               
         </div>
     </body>
 
