--- a/Codigos/colegios.html
+++ b/Codigos/colegios.html
@@ -35,19 +35,18 @@
 
                 <section class="texto">
                     <h1>COLÉGIOS</h1>
-                    <ol type="1">
-                        <li>Ensino Superior:  <a href="https://portal.pcs.ifsuldeminas.edu.br/">Ifsuldeminas-Campus Poços de Caldas</a></li>
-                        <li>Ensino Técnico:  <a href="https://portal.pcs.ifsuldeminas.edu.br/">Ifsuldeminas-Campus Poços de Caldas</a></li>
-                        <li>Ensino Médio:  <a href="https://portal.pcs.ifsuldeminas.edu.br/">Ifsuldeminas-Campus Poços de Caldas</a></li>
-                        <li>Ensino Fundamental: <a href="http://colegioninimourao.com.br/">Colégio Nini Mourão</a></li>
-                    </ol>
+                    <div class="container">
+                        <ol type="1">
+                            <li>Ensino Superior:  <a href="https://portal.pcs.ifsuldeminas.edu.br/">Ifsuldeminas-Campus Poços de Caldas</a></li>
+                            <li>Ensino Técnico:  <a href="https://portal.pcs.ifsuldeminas.edu.br/">Ifsuldeminas-Campus Poços de Caldas</a></li>
+                            <li>Ensino Médio:  <a href="https://portal.pcs.ifsuldeminas.edu.br/">Ifsuldeminas-Campus Poços de Caldas</a></li>
+                            <li>Ensino Fundamental: <a href="http://colegioninimourao.com.br/">Colégio Nini Mourão</a></li>
+                        </ol>
+                    </div>
                 </section>
 
             </main>
-            <footer class="rodape">
-                <p>Produzido por Rebeca Rosa</p>
-            </footer>
-               
+
         </div>
     </body>
 
