--- a/Codigos/formacao_academica.html
+++ b/Codigos/formacao_academica.html
@@ -15,17 +15,15 @@
                 <img src="imagens/Capa.png">
             </header>
             <nav class="menu">
-                <ul>
-                    <li><a href="index.html">SOBRE MIM</a></li>
-                    <li><a href="colegios.html">COLÉGIOS</a></li>
-                    <li><a href="sites_favoritos.html">SITES</a></li>
-                    <li><a href="horario_de_aulas.html">HORÁRIOS</a></li>
-                    <li><a href="contato.html">CONTATOS</a></li>
-                    <li><a href="instituto_federal.html">INSTITUTO FEDERAL</a></li>
-                    <li><a href="curso_superior_eng_comp.html">CURSO ENG COMP</a></li>
-                    <li><a href="formacao_academica.html">FORMAÇÃO</a></li>
-                    <li><a href="atividades_culturais.html">HOBBIES</a></li>
-                </ul>
+                <a href="index.html">SOBRE MIM</a>
+                <a href="colegios.html">COLÉGIOS</a>
+                <a href="sites_favoritos.html">SITES</a>
+                <a href="horario_de_aulas.html">HORÁRIOS</a>
+                <a href="contato.html">CONTATOS</a>
+                <a href="instituto_federal.html">INSTITUTO FEDERAL</a>
+                <a href="curso_superior_eng_comp.html">CURSO ENG COMP</a>
+                <a href="formacao_academica.html" class="active">FORMAÇÃO</a>
+                <a href="atividades_culturais.html">HOBBIES</a>
             </nav>
             <main class="corpo">
 
@@ -35,20 +33,18 @@
 
                 <section class="texto">
                     <h1>FORMAÇÃO ACADÊMICA</h1>
-                    <ul>
-                        <li>Projeto de IC: Desenvolvimento de Tecnologias<br> de Descontaminação</li>
-                        <li>Projeto de Extensão: GDAI... Me Ajude!</li>
-                        <li>Projeto de Extensão: Inclusão 4.0</li>
-                        <li>Monitoria: Eletrônica Analógica I</li>
-                        <li>Empresa Junior: Gerente de Marketing</li>
-                    </ul>
+                    <div class="container">
+                        <ul>
+                            <li>Projeto de IC: Desenvolvimento de Tecnologias<br> de Descontaminação</li>
+                            <li>Projeto de Extensão: GDAI... Me Ajude!</li>
+                            <li>Projeto de Extensão: Inclusão 4.0</li>
+                            <li>Monitoria: Eletrônica Analógica I</li>
+                            <li>Empresa Junior: Gerente de Marketing</li>
+                        </ul>
+                    </div>
                 </section>
 
-            </main>
-            <footer class="rodape">
-                <p>Produzido por Rebeca Rosa</p>
-            </footer>
-               
+            </main>              
         </div>
     </body>
 
