--- a/Codigos/horario_de_aulas.html
+++ b/Codigos/horario_de_aulas.html
@@ -1,57 +1,56 @@
 <!DOCTYPE html>
 
 <html lang="pt-br">
-    <head>
-        <title>Horários das Aulas</title>
-        <meta charset="UTF-8">
-        <meta name="author" content="Rebeca Domingos Rosa">
-        <link rel="stylesheet" type="text/css" href="style.css" />
-    </head>
 
-    <body>
-        <div class="principal">
-            
-            <header class="capa">
-                <img src="imagens/Capa.png">
-            </header>
-            <nav class="menu">
-                <ul>
-                    <li><a href="index.html">SOBRE MIM</a></li>
-                    <li><a href="colegios.html">COLÉGIOS</a></li>
-                    <li><a href="sites_favoritos.html">SITES</a></li>
-                    <li><a href="horario_de_aulas.html">HORÁRIOS</a></li>
-                    <li><a href="contato.html">CONTATOS</a></li>
-                    <li><a href="instituto_federal.html">INSTITUTO FEDERAL</a></li>
-                    <li><a href="curso_superior_eng_comp.html">CURSO ENG COMP</a></li>
-                    <li><a href="formacao_academica.html">FORMAÇÃO</a></li>
-                    <li><a href="atividades_culturais.html">HOBBIES</a></li>
-                </ul>
-            </nav>
-            <main class="corpo">
+<head>
+    <title>Horários das Aulas</title>
+    <meta charset="UTF-8">
+    <meta name="author" content="Rebeca Domingos Rosa">
+    <link rel="stylesheet" type="text/css" href="style.css" />
+</head>
 
-                <figure class="imagem">
-                    <img src="imagens/amy-horarios.png">
-                </figure>
+<body>
+    <div class="principal">
 
-                <section class="texto">
-                    <h1 id="titulo-horario">HORÁRIOS</h1>
-                    <table id="tabela">
-                      <tr>
-                          <th>Horários</th>
-                          <th>Segunda</th>
-                          <th>Terça</th>
-                          <th>Quarta</th>
-                          <th>Quinta</th>
-                          <th>Sexta</th>
-                      </tr>
-                      <tr>
+        <header class="capa">
+            <img src="imagens/Capa.png">
+        </header>
+        <nav class="menu">
+            <a href="index.html">SOBRE MIM</a>
+            <a href="colegios.html">COLÉGIOS</a>
+            <a href="sites_favoritos.html">SITES</a>
+            <a href="horario_de_aulas.html" class="active">HORÁRIOS</a>
+            <a href="contato.html">CONTATOS</a>
+            <a href="instituto_federal.html">INSTITUTO FEDERAL</a>
+            <a href="curso_superior_eng_comp.html">CURSO ENG COMP</a>
+            <a href="formacao_academica.html">FORMAÇÃO</a>
+            <a href="atividades_culturais.html">HOBBIES</a>
+        </nav>
+        <main class="corpo">
+
+            <figure class="imagem">
+                <img src="imagens/amy-horarios.png">
+            </figure>
+
+            <section class="texto">
+                <h1 id="titulo-horario">HORÁRIOS</h1>
+                <table id="tabela">
+                    <tr>
+                        <th>Horários</th>
+                        <th>Segunda</th>
+                        <th>Terça</th>
+                        <th>Quarta</th>
+                        <th>Quinta</th>
+                        <th>Sexta</th>
+                    </tr>
+                    <tr>
                         <td>8:50-10:30</td>
                         <td>Inteligência Artificial</td>
                         <td>Gerência de Redes</td>
                         <td>Princípios de Comunicação</td>
                         <td>Inteligência Artificial</td>
                         <td>Eng. Software II</td>
-                    </tr>  
+                    </tr>
                     <tr>
                         <td>11:00-12:40</td>
                         <td>Prog Web I</td>
@@ -59,7 +58,7 @@
                         <td>Eng. Software II</td>
                         <td>Banco de Dados I</td>
                         <td>Gerência de Redes</td>
-                    </tr> 
+                    </tr>
                     <tr>
                         <td>12:40-14:00</td>
                         <td colspan="5">Almoço</td>
@@ -71,7 +70,7 @@
                         <td>Livre</td>
                         <td>PLP</td>
                         <td>Livre</td>
-                    </tr> 
+                    </tr>
                     <tr>
                         <td>16:00-17:40</td>
                         <td>Banco de Dados I</td>
@@ -79,16 +78,12 @@
                         <td>Livre</td>
                         <td>PLP</td>
                         <td>Livre</td>
-                    </tr> 
-                    </table>
-                </section>
+                    </tr>
+                </table>
+            </section>
+        </main>
 
-            </main>
-            <footer class="rodape">
-                <p>Produzido por Rebeca Rosa</p>
-            </footer>
-               
-        </div>
-    </body>
+    </div>
+</body>
 
 </html>
