--- a/Codigos/index.html
+++ b/Codigos/index.html
@@ -15,17 +15,15 @@
                 <img src="imagens/Capa.png">
             </header>
             <nav class="menu">
-                <ul>
-                    <li><a href="index.html">SOBRE MIM</a></li>
-                    <li><a href="colegios.html">COLÉGIOS</a></li>
-                    <li><a href="sites_favoritos.html">SITES</a></li>
-                    <li><a href="horario_de_aulas.html">HORÁRIOS</a></li>
-                    <li><a href="contato.html">CONTATOS</a></li>
-                    <li><a href="instituto_federal.html">INSTITUTO FEDERAL</a></li>
-                    <li><a href="curso_superior_eng_comp.html">CURSO ENG COMP</a></li>
-                    <li><a href="formacao_academica.html">FORMAÇÃO</a></li>
-                    <li><a href="atividades_culturais.html">HOBBIES</a></li>
-                </ul>
+                <a href="index.html" class="active">SOBRE MIM</a>
+                <a href="colegios.html">COLÉGIOS</a>
+                <a href="sites_favoritos.html">SITES</a>
+                <a href="horario_de_aulas.html">HORÁRIOS</a>
+                <a href="contato.html">CONTATOS</a>
+                <a href="instituto_federal.html">INSTITUTO FEDERAL</a>
+                <a href="curso_superior_eng_comp.html">CURSO ENG COMP</a>
+                <a href="formacao_academica.html" >FORMAÇÃO</a>
+                <a href="atividades_culturais.html" >HOBBIES</a>
             </nav>
             <main class="corpo">
 
@@ -35,12 +33,14 @@
 
                 <section class="texto">
                     <h1>REBECA DOMINGOS ROSA</h1>
+                   <div class="container">
                     <p><strong>Idade: </strong>22 anos <br>
                         <strong>Cidade:</strong> Poços de Caldas<br>
                         <strong>Estado:</strong>Minas Gerais <br>
                         <strong>Endereço:</strong> Rua das Estrelinhas, 5<br>
                         <strong>Curso:</strong> Engenharia da Computação<br>
                         <strong>Período:</strong> 7° Período</p>
+                   </div>
                 </section>
 
             </main>
