--- a/Codigos/sites_favoritos.html
+++ b/Codigos/sites_favoritos.html
@@ -1,40 +1,40 @@
 <!DOCTYPE html>
 
 <html lang="pt-br">
-    <head>
-        <title>Sites Favoritos</title>
-        <meta charset="UTF-8">
-        <meta name="author" content="Rebeca Domingos Rosa">
-        <link rel="stylesheet" type="text/css" href="style.css" />
-    </head>
 
-    <body>
-        <div class="principal">
-            
-            <header class="capa">
-                <img src="imagens/Capa.png">
-            </header>
-            <nav class="menu">
-                <ul>
-                    <li><a href="index.html">SOBRE MIM</a></li>
-                    <li><a href="colegios.html">COLÉGIOS</a></li>
-                    <li><a href="sites_favoritos.html">SITES</a></li>
-                    <li><a href="horario_de_aulas.html">HORÁRIOS</a></li>
-                    <li><a href="contato.html">CONTATOS</a></li>
-                    <li><a href="instituto_federal.html">INSTITUTO FEDERAL</a></li>
-                    <li><a href="curso_superior_eng_comp.html">CURSO ENG COMP</a></li>
-                    <li><a href="formacao_academica.html">FORMAÇÃO</a></li>
-                    <li><a href="atividades_culturais.html">HOBBIES</a></li>
-                </ul>
-            </nav>
-            <main class="corpo">
+<head>
+    <title>Sites Favoritos</title>
+    <meta charset="UTF-8">
+    <meta name="author" content="Rebeca Domingos Rosa">
+    <link rel="stylesheet" type="text/css" href="style.css" />
+</head>
 
-                <figure class="imagem">
-                    <img src="imagens/annabeth-sites.png">
-                </figure>
+<body>
+    <div class="principal">
 
-                <section class="texto">
-                    <h1>SITES FAVORITOS</h1>
+        <header class="capa">
+            <img src="imagens/Capa.png">
+        </header>
+        <nav class="menu">
+            <a href="index.html">SOBRE MIM</a>
+            <a href="colegios.html">COLÉGIOS</a>
+            <a href="sites_favoritos.html" class="active">SITES</a>
+            <a href="horario_de_aulas.html">HORÁRIOS</a>
+            <a href="contato.html">CONTATOS</a>
+            <a href="instituto_federal.html">INSTITUTO FEDERAL</a>
+            <a href="curso_superior_eng_comp.html">CURSO ENG COMP</a>
+            <a href="formacao_academica.html">FORMAÇÃO</a>
+            <a href="atividades_culturais.html">HOBBIES</a>
+        </nav>
+        <main class="corpo">
+
+            <figure class="imagem">
+                <img src="imagens/annabeth-sites.png">
+            </figure>
+
+            <section class="texto">
+                <h1>SITES FAVORITOS</h1>
+                <div class="container">
                     <ul>
                         <li><a href="https://twitter.com">Twitter</a></li>
                         <li> <a href="https://www.wattpad.com">Wattpad</a></li>
@@ -42,14 +42,11 @@
                         <li><a href="https://open.spotify.com/">Spotify</a></li>
                         <li><a href="https://www.instagram.com/">Instagram</a></li>
                     </ul>
-                </section>
+                </div>
+            </section>
 
-            </main>
-            <footer class="rodape">
-                <p>Produzido por Rebeca Rosa</p>
-            </footer>
-               
-        </div>
-    </body>
+        </main>
+    </div>
+</body>
 
 </html>
