--- a/Codigos/colegios.html
+++ b/Codigos/colegios.html
@@ -15,17 +15,15 @@
                 <img src="imagens/Capa.png">
             </header>
             <nav class="menu">
-                <ul>
-                    <li><a href="index.html">SOBRE MIM</a></li>
-                    <li><a href="colegios.html">COLÉGIOS</a></li>
-                    <li><a href="sites_favoritos.html">SITES</a></li>
-                    <li><a href="horario_de_aulas.html">HORÁRIOS</a></li>
-                    <li><a href="contato.html">CONTATOS</a></li>
-                    <li><a href="instituto_federal.html">INSTITUTO FEDERAL</a></li>
-                    <li><a href="curso_superior_eng_comp.html">CURSO ENG COMP</a></li>
-                    <li><a href="formacao_academica.html">FORMAÇÃO</a></li>
-                    <li><a href="atividades_culturais.html">HOBBIES</a></li>
-                </ul>
+                <a href="index.html">SOBRE MIM</a>
+                <a href="colegios.html" class="active">COLÉGIOS</a>
+                <a href="sites_favoritos.html">SITES</a>
+                <a href="horario_de_aulas.html">HORÁRIOS</a>
+                <a href="contato.html">CONTATOS</a>
+                <a href="instituto_federal.html">INSTITUTO FEDERAL</a>
+                <a href="curso_superior_eng_comp.html">CURSO ENG COMP</a>
+                <a href="formacao_academica.html" >FORMAÇÃO</a>
+                <a href="atividades_culturais.html" >HOBBIES</a>
             </nav>
             <main class="corpo">
 
